Closed Bug 1209465 Opened 9 years ago Closed 9 years ago

Space key on Japanese IME doesn't work

Categories

(Firefox for Android Graveyard :: Keyboards and IME, defect)

defect
Not set
normal

Tracking

(firefox43 fixed, firefox44 fixed)

RESOLVED FIXED
Firefox 44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: hsteen, Assigned: jchen)

Details

Attachments

(3 files)

Switch to Japanese IME, hiragana mode.
Try to enter space into a text field.

Bug: Firefox doesn't understand you're typing a full-width space, nothing happens at all.

First reported on https://webcompat.com/issues/1281
jchen, any ideas?
Flags: needinfo?(nchen)
Working on it.
Assignee: nobody → nchen
Status: NEW → ASSIGNED
Flags: needinfo?(nchen)
TextComposition has a workaround where committing a composition as-is
doesn't work, when the composition consists of a single ideographic
space character [1]. This patch works around that workaround by sending
a regular commit event instead of a commit-as-is event.

[1] http://mxr.mozilla.org/mozilla-central/source/dom/events/TextComposition.cpp?rev=f4215b484d52#243
Attachment #8673144 - Flags: review?(esawin)
(In reply to Jim Chen [:jchen] [:darchons] from comment #3)

> TextComposition has a workaround where committing a composition as-is
> doesn't work, when the composition consists of a single ideographic
> space character

Hmm, we should stop using TextComposition in Android widget ASAP... I'm guessing that bug 1199658 is also caused by using TextComposition...
I don't think that's relevant... This bug happens when we dispatch eCompositionCommitAsIs, and TextComposition::DispatchCompositionEvent handles the event. It's not directly related to nsWindow using TextComposition.
Ah, I see. I probably misunderstood.

The hack was for old Chinese IMEs on desktop OSes. So, if you'd like better to disable the hack on mobile platforms, I'd agree with that, though.
Comment on attachment 8673144 [details] [diff] [review]
Work around TextComposition workaround (v1)

Review of attachment 8673144 [details] [diff] [review]:
-----------------------------------------------------------------

Assuming the old workaround is still required on desktop, I guess that's the best we can do.
Attachment #8673144 - Flags: review?(esawin) → review+
Add a test to testInputConnection for committing an ideographic space character.
Attachment #8674434 - Flags: review?(esawin)
Attachment #8674434 - Flags: review?(esawin) → review+
https://hg.mozilla.org/mozilla-central/rev/67ae96f32f6c
https://hg.mozilla.org/mozilla-central/rev/edff603cee3e
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 44
I believe that it's enough safe to uplift.

Could you try to uplift it to 43?
Flags: needinfo?(nchen)
Attached patch Patch for BetaSplinter Review
Approval Request Comment
[Feature/regressing bug #]: N/A
[User impact if declined]: Cannot enter Japanese/Chinese space character in input fields.
[Describe test coverage new/current, TreeHerder]: Locally, m-c
[Risks and why]: Small; patch is a simple workaround.
[String/UUID change made/needed]: None
Flags: needinfo?(nchen)
Attachment #8684433 - Flags: review+
Attachment #8684433 - Flags: approval-mozilla-beta?
Comment on attachment 8684433 [details] [diff] [review]
Patch for Beta

Low risk fix so android users can type spaces.  
Please uplift to beta.
Attachment #8684433 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: