Bug 1209465 - Work around TextComposition workaround. r=esawin, a=lizzard